--- a/src/AppBundle/Resources/views/Default/index.html.twig
+++ b/src/AppBundle/Resources/views/Default/index.html.twig
@@ -8,7 +8,7 @@
 			<ul class="headerContactsUl">
 				<li>
 					<div class="headerContactsPhone"></div>
-					<a class="headerContactsPhoneText"><div property="schema:headPhone">{{ headBlock.headPhone }}</div></a>
+					<a class="headerContactsPhoneText"><div property="schema:headPhone"><span class="lptracker_phone">{{ headBlock.headPhone }}</span></div></a>
 				</li>
 				<li>
 					<div class="headerContactsEmail"></div>
